meego-keyboard (0.7.17~1) unstable; urgency=low

  * [UNRELEASED]
  * Fixes: NB#284540 - The Candidate words is showed next Plugin.
  * Fixes: NB#281474 - Word suggestion list is disappearing when the finger is lifted from the keyboard after long tapping on the space key.
  * Fixes: NB#285711 - Accent popup shows two active keys sometimes

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Wed, 12 Oct 2011 10:44:24 +0300

meego-keyboard (0.7.16-1) unstable; urgency=low

  * Fixes: NB#280274 - Input methods: 'permille' symbol in keyboard displayed instead of 'section of a law' symbol in Kazakh language
  * Fixes: NB#282901 - Contact > while editing a contact, Arabic digits appears instead of Hindic on the keypad
  * Fixes: NB#284004 - Vietnamese VKB is shown as truncated in landscape mode & some keys are missing in portrait mode.
  * Fixes: NB#268106 - Accents in Thai layouts are not aligned correctly inside a key/pop-up menu
  * Fixes: NB#272715 - Dead key VKB layout is retaining in a scenario.

 -- Aapo Kojo <aapo.kojo@nokia.com>  Wed, 12 Oct 2011 09:28:00 +0300

meego-keyboard (0.7.15-2) unstable; urgency=low

  * New release

 -- Aapo Kojo <aapo.kojo@nokia.com>  Fri, 30 Sep 2011 14:41:27 +0300

meego-keyboard (0.7.15-1) unstable; urgency=low

  * Fixes: NB#275190 - [TASK] Track haptic feedback resource issue for error prompt
  * Fixes NB#275694 - Chinese letters are allowed to enter in email address field.

 -- Wang Zongxin <ext-zongxin.wang@nokia.com>  Fri, 30 Sep 2011 10:52:03 +0300

meego-keyboard (0.7.14-1) unstable; urgency=low

  * Fixes: NB#280952

 -- Wang Zongxin <ext-zongxin.wang@nokia.com>  Thu, 22 Sep 2011 11:11:11 +0300

meego-keyboard (0.7.13-1) unstable; urgency=low

  * Fixes: NB#281465

 -- Aapo Kojo <aapo.kojo@nokia.com>  Fri, 16 Sep 2011 15:04:06 +0300

meego-keyboard (0.7.12-1) unstable; urgency=low

  * New release

 -- Aapo Kojo <aapo.kojo@nokia.com>  Mon, 12 Sep 2011 13:03:01 +0300

meego-keyboard (0.7.11-1) unstable; urgency=low
